[package]
name = "openqasm3"
version = "0.0.1"
edition = "2021"
authors = ["gyu-don <takumi.kt@gmail.com>"]
description = "OpenQASM3 parser"
license = "Apache-2.0"
repository = "https://github.com/gyu-don/openqasm3-rs"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
